last css adjustements. Tried to fix the gap on carousel large view on resize, but couldnt figure it out

--- a/src/components/Carousel/style.scss
+++ b/src/components/Carousel/style.scss
@@ -10,7 +10,7 @@
 }
 
 // middle carousel (with a different bg color?)
-.carousel-color {
+#carousel-color {
   background-color: vars.$backgroundGreen;
 
   h2 {
