--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -75,6 +75,7 @@
       align-items: center;
       flex-wrap: wrap;
       min-height: 100px;
+      margin-top: 2rem;
       margin-bottom: 50px;
 
       .category-card {
